fix dark mode

--- a/packages/x-scheduler/src/joy/week-view/WeekView.css
+++ b/packages/x-scheduler/src/joy/week-view/WeekView.css
@@ -1,9 +1,20 @@
 @import '../styles/tokens.css';
 
 .WeekViewContainer {
+  --weekend-background: var(--mauve-1);
+  --text-strong: var(--mauve-9);
+  --text-soft: var(--mauve-5);
   --border-color: var(--mauve-2);
   --fixed-cell-width: 68px;
+}
 
+.mode-dark .WeekViewContainer {
+  --weekend-background: var(--mauve-9);
+  --text-strong: var(--mauve-5);
+  --text-soft: var(--mauve-2);
+}
+
+.WeekViewContainer {
   display: flex;
   width: 100%;
   height: 100%;
@@ -36,7 +47,7 @@
 
 .WeekViewAllDayEventsRow {
   overflow-y: scroll;
-  scrollbar-color: var(--mauve-1) var(--mauve-1);
+  scrollbar-color: var(--weekend-background) var(--weekend-background);
   min-height: var(--space-11);
 
   > *:not(:last-child) {
@@ -49,7 +60,7 @@
   background: transparent;
 }
 .WeekViewAllDayEventsRow::-webkit-scrollbar {
-  background: var(--mauve-1);
+  background: var(--weekend-background);
 }
 
 .WeekViewHeaderCell {
@@ -64,18 +75,18 @@
   font-size: var(--font-size-1);
   font-style: var(--em-font-style);
   padding: 10px 0 0 15px;
-  color: var(--mauve-5);
+  color: var(--text-soft);
 }
 
 .WeekViewHeaderDayName {
   font-size: var(--font-size-2);
-  color: var(--mauve-5);
+  color: var(--text-soft);
   line-height: 1;
 }
 
 .WeekViewHeaderDayNumber {
   font-size: var(--font-size-6);
-  color: var(--mauve-9);
+  color: var(--text-strong);
   font-weight: var(--font-weight-3);
   line-height: 1;
 }
@@ -111,7 +122,7 @@
 .WeekViewTimeAxisText:not(:empty) {
   font-size: var(--font-size-1);
   line-height: calc(100% / 24);
-  color: var(--mauve-5);
+  color: var(--text-soft);
 }
 
 .WeekViewTimeAxisCell:not(:first-child)::after {
@@ -144,7 +155,7 @@
 
 .WeekViewColumn[data-weekend='true'],
 .WeekViewAllDayEventsCell[data-weekend='true'] {
-  background: var(--mauve-1);
+  background: var(--weekend-background);
 }
 
 .WeekViewEvent {
